--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(./background2.jpg);
+    background: url(../images/background2.jpg);
     background-size: cover;
 }
 
@@ -104,7 +104,7 @@ body {
     border-radius: var(--border-radius);
     outline: none;
     cursor: pointer;
-    background: url(./button.jpg);
+    background: url(../images/button.jpg);
     background-size: cover;
     opacity: 0.7;
 }
