--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -12,8 +12,8 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(../images/background2.jpg);
-    background-size: cover;
+    background: url(../images/background4.jpg);
+    background-size:
 }
 
 .container {
