--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     font-size: 18px;
     background: url(../images/background4.jpg);
-    background-size:
+    background-size:auto;
 }
 
 .container {
