--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -21,8 +21,8 @@ body {
     max-width: 400px;
     margin: 1rem;
     padding: 2rem;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
+    border-color: 'black';
     background: #ffffff;
 }
 
