--- a/Group8ContactProject/css/contact.css
+++ b/Group8ContactProject/css/contact.css
@@ -19,16 +19,17 @@ body {
 /*The code below is for the main page title button*/
 
 .container {
-    width: 400px;
-    max-width: 400px;
+    width: 80%;
+    max-width: 800px;
     margin: 1rem;
-    padding: 2rem;
+    padding: 20rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
     background: #ffffff;
+    
 }
 
-.container,
+
 .form__title {
     font-family: 500 1rem 'Tourney', sans-serif;
     border: 'black';
@@ -36,12 +37,11 @@ body {
 }
 
 .form__title {
-    margin-bottom: 2rem;
+    margin-bottom: 15rem;
     text-align: center;
-
 }
 
-/*The code below is for the logout button*/
+
 
 .form__button {
     width: 100%;
@@ -59,5 +59,53 @@ body {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    width: auto; /* Set width to auto to prevent stretching across the screen */
+    width: auto;
 }
+
+.form__button--add-contact {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    width: auto;
+}
+
+.popup {
+    display: none;
+    position: absolute;
+    background: #f9f9f9;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+}
+
+.popup-content {
+    padding: 20px;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.edit-contact-button,
+.delete-contact-button {
+    padding: 8px;
+    margin-right: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    background-color: #009688; /* Adjust the color as needed */
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+}
+
+#editContactPopup,
+#deleteContactPopup {
+    display: none;
+}
+
