--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -76,7 +76,7 @@ body {
     border-radius: var(--border-radius);
     border: 'black';
     outline: auto;
-    background: #eeeeee;
+    background: #d6d6d6;
 }
 
 .form__input:focus {
@@ -110,6 +110,8 @@ body {
 .form__button:hover {   
     opacity: 1;
     transition: 0.5s;
+    transform: scale(1.04); 
+    background-color: #cccccc;
 }
 
 .form__button:active {
