--- a/Group8ContactProject/css/main.css
+++ b/Group8ContactProject/css/main.css
@@ -12,8 +12,8 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(../images/background3.jpg);
-    background-size:auto;
+    background: url("../images/background2.jpg");
+    background-size: cover;
 }
 
 .container {
@@ -21,8 +21,8 @@ body {
     max-width: 400px;
     margin: 1rem;
     padding: 2rem;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
     border-radius: var(--border-radius);
-    border-color: 'black';
     background: #ffffff;
 }
 
@@ -30,8 +30,6 @@ body {
 .form__input,
 .form__button {
     font-family: 500 1rem 'Tourney', sans-serif;
-    border: 'black';
-    border-radius: var(--border-radius);
 }
 
 .form--hidden {
@@ -74,13 +72,14 @@ body {
     padding: 0.75rem;
     box-sizing: border-box;
     border-radius: var(--border-radius);
-    border: 'black';
-    outline: auto;
-    background: #d6d6d6;
+    border: 1px solid #ffffff;
+    outline: none;
+    background: #eeeeee;
+    transition: background 0.2s, border-color 0.2s;
 }
 
 .form__input:focus {
-    border-color: 'black';
+    border-color: var(--color-primary);
     background: #ffffff;
 }
 
@@ -98,20 +97,21 @@ body {
 .form__button {
     width: 100%;
     padding: 1rem 2rem;
+    font-weight: bold;
     font-size: 1.1rem;
-    color: 'black';
-    cursor: pointer;
-    box-sizing: border-box;
+    color: #ffffff;
+    border: none;
     border-radius: var(--border-radius);
-    border: 'black';
-    outline: auto;
+    outline: none;
+    cursor: pointer;
+    background: url(../images/button.jpg);
+    background-size: cover;
+    opacity: 0.7;
 }
 
-.form__button:hover {   
+.form__button:hover {
     opacity: 1;
     transition: 0.5s;
-    transform: scale(1.04); 
-    background-color: #cccccc;
 }
 
 .form__button:active {
@@ -130,11 +130,4 @@ body {
 
 .form__link:hover {
     text-decoration: underline;
-}
-
-.form__button--logout {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    width: auto; /* Set width to auto to prevent stretching across the screen */
 }
