--- a/Group8ContactProject/css/landingPage.css
+++ b/Group8ContactProject/css/landingPage.css
@@ -748,8 +748,32 @@ div#contact__card {
     padding-inline: 10%;
     margin-block: 5%;
     
+}
+
+.input__container {
     display: flex;
-    justify-content: space-between;
+    align-items: flex-start;
+    min-height: 40px;
+}
+
+
+.input__container p {
+    width: 120px;
+    margin-right: 45px;
+    justify-content: left;
+}
+
+
+
+input.contact__input--error {
+    border-color: #cc3333
+}
+
+.form__input-error-message {
+    font-weight: bold;
+    text-align: left;
+    color: #cc3333; /* Adjust styles as needed */
+    font-size: 15px; /* Adjust styles as needed */
 }
 
 .open-popup {
